k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-ui-dev
  namespace: app-dev
  labels:
    name: pi-ui-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-ui-dev
      name: pi-ui-dev
  template:
    metadata:
      labels:
        app: pi-ui-dev
        name: pi-ui-dev
    spec:
      containers:
        - name: pi-ui-dev
          image: erickhdez1997/pi-ui:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
