k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-ui-dev
  namespace: app-dev
  labels:
    name: pi-ui-dev
spec:
  selector:
    app: pi-ui-dev
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
