k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ui-ingress
  namespace: app-dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
spec:
  rules:
  - host: ehpi.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-ui
            port:
              number: 80
  tls:
  - hosts:
    - ehpi.duckdns.org
    secretName: pi-app-tls
